UPDATE prevent heading components from overflowing

--- a/app/styles/components/heading.css
+++ b/app/styles/components/heading.css
@@ -7,7 +7,7 @@
     color: var(--heading-color, var(--color-secondary-400));
 
     overflow-wrap: break-word;
-    text-wrap: balance;
+    text-wrap: auto;
     hyphens: auto;
 }
 
